frontend/test/should_pass/record_001.grg
rule r {
	x:Node;

	modify {
		exec(record("# label1 ") ;> record(x) ;> record("\n"));
	}
}
