frontend/test/should_fail/exec_supertype_as_argument.grg
using deep_model_001;

rule r(y : Acc) {
  n : Node;
  modify{
    exec(r(n)); // supertype as argument
  }
}
